# openai-builder-bootcamp

./: .gitignore  README.md
builder-bootcamp-main-plus-catherine-evals/: .gitignore  CONTRIBUTING.md  EXTENSIONS_README.md  README.md  pyproject.toml  requirements.txt
builder-bootcamp-main-plus-catherine-evals/labs/data/: agent_model_answer.jsonl  faq_example.jsonl  faq_example.md  rag_model_answer.jsonl  sample_01.jsonl  sample_02.jsonl  varieties.json  wine_france_subset.csv
builder-bootcamp-main-plus-catherine-evals/labs/lab01_evals_challenge/: README.md  evaluation_results_helper.py  run.py  testing_criteria.py
builder-bootcamp-main-plus-catherine-evals/labs/lab01_evals_guided/: README.md  run.py  testing_criteria.py  testing_criteria_solution.py
builder-bootcamp-main-plus-catherine-evals/labs/lab02_agents_challenge/: README.md  agent.py  eval_agents.py  router.py  router_solution.py  testing_criteria.py  tools.py  tools_solution.py
builder-bootcamp-main-plus-catherine-evals/labs/lab02_agents_guided/: README.md  agent.py  agent_solution.py  eval_agents.py  router.py  router_solution.py  run.py  tools.py
builder-bootcamp-main-plus-catherine-evals/labs/lab03_rag_challenge/: README.md  step_01_process_faq.py  step_02_create_vector_store.py  step_03_run_questions.py  step_04_eval_results.py  testing_criteria.py
builder-bootcamp-main-plus-catherine-evals/labs/lab03_rag_guided/: README.md  step_01_process_faq.py  step_03_run_questions.py  (+3 more)
builder-bootcamp-main-plus-catherine-evals/legacy/: Agents_README.md  Evals_README.md  Fine_Tuning_README.md  RAG_README.md
(+29 files in other folders)
