[project]
name = "builder-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.13",
    "openai>=1.109.1",
    "openai-agents>=0.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
]
